Submit to button.

--- a/retourVm/transcendance/services/Webserver/static/html/login.html
+++ b/retourVm/transcendance/services/Webserver/static/html/login.html
@@ -11,7 +11,7 @@
 					</button>
 				</div>
 				<input name="username" type="text" minlength="1" maxlength="30" class="form-control border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group username hidden translate-pholder translate-aria-label" placeholder="Nom d'utilisateur" aria-label="Nom d'utilisateur">
-				<button type="submit" class="w-100 py-2 mb-1 text-break submit translate-text">Connexion</button>
+				<button type="button" class="w-100 py-2 mb-1 text-break submit translate-text">Connexion</button>
 				<button type="button" class="mx-auto border-0 forgot-password translate-text translate-aria-label" aria-label="Mot de passe oublie">Mot de passe oublié</button>
 				<button type="button" class="mx-auto mt-2 signup translate-text translate-aria-label" aria-label="Inscription">Inscription</button>
 				<button type="button" class="mx-auto mt-2 cancel-signup hideInFade translate-text translate-aria-label" aria-label="Annuler">Annuler</button>
