Changed alpha code from min to max.

--- a/retourVm/transcendance/services/Webserver/static/html/game.html
+++ b/retourVm/transcendance/services/Webserver/static/html/game.html
@@ -175,17 +175,17 @@
 										<label class="lang-label">
 											<span class="fi fi-fr"></span>
 											<span>Français</span>
-											<input type="radio" name="lang" value="fr" checked>
+											<input type="radio" name="lang" value="FR" checked>
 										</label>
 										<label class="lang-label">
 											<span class="fi fi-us"></span>
 											<span>English</span>
-											<input type="radio" name="lang" value="en">
+											<input type="radio" name="lang" value="EN">
 										</label>
 										<label class="lang-label">
 											<span class="fi fi-nl"></span>
 											<span>Nederlands</span>
-											<input type="radio" name="lang" value="nl">
+											<input type="radio" name="lang" value="NL">
 										</label>
 									</div>
 									<p class="translate-txt">N'oubliez pas de sauvegarder pour appliquer votre choix à la prochaine connexion</p>
