--- a/retourVm/transcendance/services/Webserver/static/html/login.html
+++ b/retourVm/transcendance/services/Webserver/static/html/login.html
@@ -34,9 +34,9 @@
 					</button>
 				</div>
 				<select class="mt-2">
-					<option value="fr">Français</option>
-					<option value="en">English</option>
-					<option value="nl">Nederlands</option>
+					<option value="FR">Français</option>
+					<option value="EN">English</option>
+					<option value="NL">Nederlands</option>
 				</select>
 			</div>
 		</div>
