Changed pseudo and avatar.

--- a/retourVm/transcendance/services/Webserver/static/html/game.html
+++ b/retourVm/transcendance/services/Webserver/static/html/game.html
@@ -168,7 +168,7 @@
 					</div>
 					<div class="wrapper-options-tabs tab-tabs">
 						<div class="wrapper-options-forms active">
-							<form class="options-form">
+							<form class="options-form" method="POST">
 								<div class="options-section">
 									<h4 class="translate-txt">Langue</h4>
 									<div class="options-wrapper-lang">
@@ -222,7 +222,7 @@
 										</div>
 									</div>
 								</div>
-								<button class="options-save translate-txt" type="submit">Sauvegarder</button>
+								<button class="options-save translate-txt" type="button">Sauvegarder</button>
 								<div class="options-section">
 									<h4 class="translate-txt">Authentification à deux facteurs</h4>
 									<div class="options-wrapper-2fa">
