--- a/retourVm/transcendance/services/Webserver/static/html/index.html
+++ b/retourVm/transcendance/services/Webserver/static/html/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Jouez au célèbre jeu-video des années 70, PONG !">
 		<title>ft_transcendance</title>
-		<link rel="icon" type="image/x-icon" href="/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 		<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css">
 		<script src="https://kit.fontawesome.com/70111f5ad5.js" crossorigin="anonymous"></script>
