Fix images paths.

--- a/retourVm/transcendance/services/Webserver/static/html/game.html
+++ b/retourVm/transcendance/services/Webserver/static/html/game.html
@@ -379,7 +379,7 @@
 								<td tabindex="0">
 									<div class="chat-message">
 										<div class="chat-user-avatar">
-											<img src="/default_avatar.png" alt="Avatar">
+											<img src="/images/default_avatar.png" alt="Avatar">
 										</div>
 										<p><span>User</span>: MSG</p>
 									</div>
@@ -403,7 +403,7 @@
 								<td tabindex="0">
 									<div class="chat-message">
 										<div class="chat-user-avatar">
-											<img src="/default_avatar.png" alt="Avatar">
+											<img src="images/default_avatar.png" alt="Avatar">
 										</div>
 										<p><span>User</span>: MSG</p>
 									</div>
@@ -431,7 +431,7 @@
 								<td tabindex="0">
 									<div class="friend-card">
 										<div class="friend-user-avatar">
-											<img src="/default_avatar.png" alt="Avatar">
+											<img src="images/default_avatar.png" alt="Avatar">
 										</div>
 										<div class="friend-user">
 											<div>
@@ -457,7 +457,7 @@
 								<td tabindex="0">
 									<div class="friend-card">
 										<div class="friend-user-avatar">
-											<img src="/default_avatar.png" alt="Avatar">
+											<img src="images/default_avatar.png" alt="Avatar">
 										</div>
 										<div class="friend-user">
 											<div>
