--- a/retourVm/transcendance/services/Webserver/static/html/login.html
+++ b/retourVm/transcendance/services/Webserver/static/html/login.html
@@ -15,6 +15,9 @@
 				<button type="button" class="mx-auto border-0 forgot-password translate-text translate-aria-label" aria-label="Mot de passe oublie">Mot de passe oublié</button>
 				<button type="button" class="mx-auto mt-2 signup translate-text translate-aria-label" aria-label="Inscription">Inscription</button>
 				<button type="button" class="mx-auto mt-2 cancel-signup hideInFade translate-text translate-aria-label" aria-label="Annuler">Annuler</button>
+				<div class="hidden">
+					<input name="2fa" type="text" minlength="8" maxlength="8" class="hidden">
+				</div>
 			</form>
 			<div class="w-100 text-center">
 				<div class="w-100 text-center special-login">
