--- a/retourVm/transcendance/services/Webserver/static/html/login.html
+++ b/retourVm/transcendance/services/Webserver/static/html/login.html
@@ -17,6 +17,7 @@
 				<button type="button" class="mx-auto mt-2 cancel-signup hideInFade translate-text translate-aria-label" aria-label="Annuler">Annuler</button>
 				<div class="hidden">
 					<input name="2fa" type="text" minlength="8" maxlength="8" class="hidden">
+					<button type="button">Connexion</button>
 				</div>
 			</form>
 			<div class="w-100 text-center">
