--- a/retourVm/transcendance/services/Webserver/static/html/reset.html
+++ b/retourVm/transcendance/services/Webserver/static/html/reset.html
@@ -7,7 +7,6 @@
 		<title>ft_transcendance</title>
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 		<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css">
 		<script src="https://kit.fontawesome.com/70111f5ad5.js" crossorigin="anonymous"></script>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,12 +14,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="../css/index.css">
-		<script src="../js/game.js" defer></script>
-		<script src="../js/Tetrominos.js" defer></script>
-		<script src="../js/tetris.js" defer></script>
-		<script src="../js/pong.js" defer></script>
-		<script src="../js/login.js" defer></script>
-		<script src="../js/index.js" defer></script>
+		<script src="../js/reset.js" defer></script>
 	</head>
 	<body>
 		<main class="login-page d-flex justify-content-center align-items-center h-100">
