--- a/retourVm/transcendance/services/Webserver/static/html/login.html
+++ b/retourVm/transcendance/services/Webserver/static/html/login.html
@@ -16,7 +16,7 @@
 				<button type="button" class="mx-auto mt-2 signup translate-text translate-aria-label" aria-label="Inscription">Inscription</button>
 				<button type="button" class="mx-auto mt-2 cancel-signup hideInFade translate-text translate-aria-label" aria-label="Annuler">Annuler</button>
 				<div class="hidden">
-					<input name="2fa" type="text" minlength="8" maxlength="8" class="hidden">
+					<input name="2fa" type="text" minlength="8" maxlength="8">
 					<button type="button">Connexion</button>
 				</div>
 			</form>
