--- a/services/Webserver/static/html/login.html
+++ b/services/Webserver/static/html/login.html
@@ -18,7 +18,7 @@
 				<button type="button" class="mx-auto mt-2 signup translate-text translate-aria-label" aria-label="Inscription">Inscription</button>
 				<button type="button" class="mx-auto mt-2 cancel-signup hideInFade translate-text translate-aria-label" aria-label="Annuler">Annuler</button>
 				<div class="div-2fa hidden">
-					<p class="error error-twofa"></p>
+					<p class="error error-2fa"></p>
 					<input name="2fa" type="text" minlength="8" maxlength="8" placeholder="Code reçu" class="form-control border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group translate-pholder translate-aria-label" aria-label="Code reçu">
 					<button type="submit" class="w-100 py-2 mb-1 text-break translate-text">Valider</button>
 				</div>
