Added more translations; Re-added Back/Fordward buttons on SPA.

--- a/services/Webserver/static/html/game.html
+++ b/services/Webserver/static/html/game.html
@@ -9,7 +9,7 @@
 			<li class="nav-user translate-title" title="Voir mon historique">
 				<button>
 					<img src="/images/default_avatar.png" alt="Avatar">
-					<span>Alexioos95</span>
+					<span>User</span>
 					<i class="fa-solid fa-clock-rotate-left"></i>
 				</button>
 			</li>
@@ -143,7 +143,7 @@
 						<input class="translate-pholder translate-aria-label" type="text" name="p3" maxlength="30" placeholder="Joueur 3" aria-label="Pseudonyme du joueur 3">
 						<input class="translate-pholder translate-aria-label" type="text" name="p4" maxlength="30" placeholder="Joueur 4" aria-label="Pseudonyme du joueur 4">
 					</div>
-					<button class="translate-txt translate-aria-label" type="button" aria-label="Valider">Valider</button>
+					<button class="translate-txt" type="button">Valider</button>
 				</form>
 				<div class="wrapper-options hidden">
 					<button type="button" class="cross-button">
@@ -224,12 +224,12 @@
 									</div>
 									<div class="twofa-set-div hidden">
 										<div>
-											<input type="email" name="2fa-mail" placeholder="Email">
-											<button type="button">Envoyer</button>
+											<input type="email" name="2fa-mail" class="translate-pholder translate-aria-label" placeholder="Email" aria-label="Email">
+											<button type="button" class="translate-txt">Envoyer</button>
 										</div>
 										<div class="hidden">
-											<input name="2fa" type="text" minlength="8" maxlength="8" placeholder="Code reçu">
-											<button type="button">Activer</button>
+											<input name="2fa" type="text" minlength="8" maxlength="8" class="translate-pholder translate-aria-label" placeholder="Code reçu" aria-label="Code reçu">
+											<button type="button" class="translate-txt">Activer</button>
 										</div>
 									</div>
 								</div>
