Translated ResetAdded more aria-labels.

--- a/services/Webserver/static/html/reset.html
+++ b/services/Webserver/static/html/reset.html
@@ -4,12 +4,12 @@
 			<form method="POST" class="w-100 h-100 form-group text-center d-flex flex-column" autocomplete="on">
 				<h1 class="text-center mb-5 font-weight-bolder text-break">ft_transcendance</h1>
 				<div class="position-relative">
-					<input name="password" type="password" minlength="10" class="form-control pr-5 border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group password translate-pholder translate-aria-label" placeholder="Nouveau mot de passe" aria-label="Mot de passe">
-					<button type="button" class="position-absolute border-0 show-password">
+					<input name="password" type="password" minlength="10" class="form-control pr-5 border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group password translate-pholder translate-aria-label" placeholder="Nouveau mot de passe" aria-label="Nouveau mot de passe">
+					<button type="button" class="position-absolute border-0 show-password translate-aria-label" aria-label="Changer l'affichage de mon mot de passe">
 						<i class="fa-solid fa-eye-slash"></i>
 					</button>
 				</div>
-				<button type="button" class="w-100 py-2 mb-1 text-break submit translate-text" onclick="clicked()">Reinitialiser !</button>
+				<button type="button" class="w-100 py-2 mb-1 text-break submit translate-text">Reinitialiser !</button>
 			</form>
 			<select>
 				<option value="FR">Français</option>
