--- a/services/Webserver/static/html/index.html
+++ b/services/Webserver/static/html/index.html
@@ -15,6 +15,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="../css/index.css">
+		<script src="../js/websockets.js" defer></script>
 		<script src="../js/game.js" defer></script>
 		<script src="../js/Tetrominos.js" defer></script>
 		<script src="../js/tetris.js" defer></script>
