Draft for sendNewPaswd.

--- a/services/Webserver/static/html/reset.html
+++ b/services/Webserver/static/html/reset.html
@@ -9,6 +9,7 @@
 						<i class="fa-solid fa-eye-slash"></i>
 					</button>
 				</div>
+				<p class="error error-reset"></p>
 				<button type="button" class="w-100 py-2 mb-1 text-break submit translate-text">Reinitialiser !</button>
 			</form>
 			<select>
