--- a/services/Webserver/static/html/game.html
+++ b/services/Webserver/static/html/game.html
@@ -247,7 +247,7 @@
 											</div>
 											<div class="blocked-user">
 												<span>User</span>
-												<button type="button" title="Retirer de la liste des bloqués" onclick="deleteBLock()">
+												<button type="button" title="Retirer de la liste des bloqués" onclick="deleteBlocked()">
 													<i class="fa-solid fa-square-minus"></i>
 													<span class="translate-txt">Débloquer</span>
 												</button>
