Fixed submit's button; Changed mean to send image to back.

--- a/services/Webserver/static/html/game.html
+++ b/services/Webserver/static/html/game.html
@@ -185,7 +185,7 @@
 									<h4 class="translate-txt">Avatar</h4>
 									<label>
 										<span class="translate-txt">Changer mon avatar:</span>
-										<input type="file" name="avatar" class="change-avatar">
+										<input type="file" name="avatar" class="change-avatar" accept=".jpg, .png">
 									</label>
 								</div>
 								<div class="options-section options-div">
