--- a/services/Webserver/static/html/login.html
+++ b/services/Webserver/static/html/login.html
@@ -5,7 +5,7 @@
 				<h1 class="text-center mb-5 font-weight-bolder text-break">ft_transcendance</h1>
 				<input name="email" type="email" class="form-control border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group email translate-pholder translate-aria-label" placeholder="Email" aria-label="Email">
 				<div class="position-relative">
-					<input name="password" type="password" minlength="10" class="form-control pr-5 border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group password translate-pholder translate-aria-label" placeholder="Mot de passe" aria-label="Mot de passe">
+					<input name="password" type="password" minlength="8" maxlength="70" class="form-control pr-5 border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group password translate-pholder translate-aria-label" placeholder="Mot de passe" aria-label="Mot de passe">
 					<button type="button" class="position-absolute border-0 show-password translate-aria-label" aria-label="Changer l'affichage de mon mot de passe">
 						<i class="fa-solid fa-eye-slash"></i>
 					</button>
