Made design for challenges; Fixed errors in Pong, history and popup.

--- a/services/Webserver/static/html/game.html
+++ b/services/Webserver/static/html/game.html
@@ -50,7 +50,7 @@
 			<form>
 				<div class="wrapper-selectors">
 					<div class="wrapper-game-selectors">
-						<h3 class="translate-txt translate-aria-label" aria-label="Choisissez le jeu: Pong ou Tetris">Jeu</h3>
+						<h3 class="translate-txt translate-aria-label" aria-label="Choisissez le jeu:">Jeu</h3>
 						<div class="wrapper-game-selector">
 							<label class="game-selector">
 								<input type="radio" name="game" value="pong" aria-label="Pong">
@@ -59,7 +59,7 @@
 								</span>
 							</label>
 							<label class="game-selector">
-								<input type="radio" name="game" value="tetris" aria-label="Tetris">
+								<input type="radio" name="game" value="tetris" aria-label="Tetris" disabled>
 								<span>
 									<img src="/svg/tetris.svg" alt="Tetris">
 								</span>
