Fix passwords not working for updateUserInfos.

--- a/services/Webserver/static/html/game.html
+++ b/services/Webserver/static/html/game.html
@@ -202,13 +202,13 @@
 										<div class="options-wrapper-password">
 											<span class="translate-txt">Mot de passe:</span>
 											<label>
-												<input class="translate-pholder options-password" type="password" name="options-password options-password-curr" placeholder="Actuel">
+												<input class="translate-pholder options-password" type="password" name="options-password-curr" placeholder="Actuel">
 												<button type="button" class="show-password translate-aria-label" aria-label="Changer l'affichage de mon mot de passe">
 													<i class="fa-solid fa-eye-slash"></i>
 												</button>
 											</label>
 											<label>
-												<input class="translate-pholder options-password" type="password" name="options-password options-password-new" placeholder="Nouveau">
+												<input class="translate-pholder options-password" type="password" name="options-password-new" placeholder="Nouveau">
 												<button type="button" class="show-password translate-aria-label" aria-label="Changer l'affichage de mon mot de passe">
 													<i class="fa-solid fa-eye-slash"></i>
 												</button>
