Last tests before push

--- a/services/Webserver/static/html/game.html
+++ b/services/Webserver/static/html/game.html
@@ -88,7 +88,7 @@
 								<span class="mode-text translate-txt">Tournoi local a 4</span>
 							</label>
 							<label class="mode-selector translate-title">
-								<input class="translate-aria-label" type="radio" name="mode" value="online" aria-label="Joueur contre Joueur en ligne">
+								<input class="translate-aria-label" type="radio" name="mode" value="online" aria-label="Joueur contre Joueur en ligne" disabled>
 								<span class="wrapper-circle">
 									<span class="base-circle">
 										<span class="top-circle"></span>
